--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Hero-section -->
     <section class="hero-section">
       <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-      <a class="hero-buttom" href="">Заказать услугу</a>
+      <button type="button" class="hero-button" data-modal-open>Заказать услугу</button>
     </section>
       <!-- Advantages-section -->
 
@@ -364,5 +364,15 @@
       </div>
     </div>
   </footer>
+  <div class="backdrop is-hidden" data-modal>
+    <div class="modal is-hidden">
+      <button class="modal-close-button" type="button" data-modal-close>
+        <svg width="11" height="11">
+          <use href="./images/sprite.svg#close"></use>
+        </svg>
+      </button>
+    </div>
+  </div>
+  <script src="./js/modal.js"></script>
 </body>
 </html>
