--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,10 @@
         <ul class="items-list">
           <li>
             <a class="items-link" href="#">
-              <img src="./images/Portfolio/img.jpg" alt="Скриншот сайта" width="370">
+              <div class="overlay">
+                <img src="./images/Portfolio/img.jpg" alt="Скриншот сайта" width="370">
+                <p class="hidden-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="items-content">
                 <h2>Технокряк</h2>
                 <p>Веб-сайт</p>
@@ -71,7 +74,10 @@
           </li>
           <li>
             <a class="items-link" href="#">
-              <img src="./images/Portfolio/img-1.jpg" alt="Два игрока в баскетбол" width="370">
+              <div class="overlay">
+                <img src="./images/Portfolio/img-1.jpg" alt="Два игрока в баскетбол" width="370">
+                <p class="hidden-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="items-content">
                 <h2>Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>   
@@ -80,7 +86,10 @@
           </li>
           <li>
             <a class="items-link" href="#">
-              <img src="./images/Portfolio/img-2.jpg" alt="Логотип ресторана" width="370">
+              <div class="overlay">
+                <img src="./images/Portfolio/img-2.jpg" alt="Логотип ресторана" width="370">
+                <p class="hidden-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="items-content">
                 <h2>Ресторан Seafood</h2>
                 <p>Приложение</p>
@@ -89,7 +98,10 @@
           </li>
           <li>
             <a class="items-link" href="#">
-              <img src="./images/Portfolio/img-3.jpg" alt="Наушники" width="370">
+              <div class="overlay">
+                <img src="./images/Portfolio/img-3.jpg" alt="Наушники" width="370">
+                <p class="hidden-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="items-content">
                 <h2>Проект Prime</h2>
                 <p>Маркетинг</p>
@@ -98,7 +110,10 @@
           </li>
           <li>
             <a class="items-link" href="#">
-              <img src="./images/Portfolio/img-4.jpg" alt="Белая и коричневая упаковки" width="370">
+              <div class="overlay">
+                <img src="./images/Portfolio/img-4.jpg" alt="Белая и коричневая упаковки" width="370">
+                <p class="hidden-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="items-content">
                 <h2>Проект Boxes</h2>
                 <p>Приложение</p>
@@ -107,7 +122,10 @@
           </li>
           <li>
             <a class="items-link" href="#">
-              <img src="./images/Portfolio/img-5.jpg" alt="Монитор с открытым сайтом" width="370">
+              <div class="overlay">
+                <img src="./images/Portfolio/img-5.jpg" alt="Монитор с открытым сайтом" width="370">
+                <p class="hidden-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="items-content">
                 <h2>Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
@@ -116,7 +134,10 @@
           </li>
           <li>
             <a class="items-link" href="#">
-              <img src="./images/Portfolio/img-6.jpg" alt="Открытая книжка" width="370">
+              <div class="overlay">
+                <img src="./images/Portfolio/img-6.jpg" alt="Открытая книжка" width="370">
+                <p class="hidden-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="items-content">
                 <h2>Издание Limited Edition</h2>
                 <p>Дизайн</p>
@@ -126,7 +147,10 @@
           </li>
           <li>
             <a class="items-link" href="#">
-              <img src="./images/Portfolio/img-7.jpg" alt="Бирка LAB EL TAG" width="370">
+              <div class="overlay">
+                <img src="./images/Portfolio/img-7.jpg" alt="Бирка LAB EL TAG" width="370">
+                <p class="hidden-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="items-content">
                 <h2>Проект LAB</h2>
                 <p>Маркетинг</p>
@@ -135,7 +159,10 @@
           </li>
           <li>
             <a class="items-link" href="#">
-              <img src="./images/Portfolio/img-8.jpg" alt="Работа за ноутбуком в приложении Growing Business" width="370">
+              <div class="overlay">
+                <img src="./images/Portfolio/img-8.jpg" alt="Работа за ноутбуком в приложении Growing Business" width="370">
+                <p class="hidden-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="items-content">
                 <h2>Growing Business</h2>
                 <p>Приложение</p>
