--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     </div>
   </footer>
   <div class="backdrop is-hidden" data-modal>
-    <div class="modal is-hidden">
+    <div class="modal">
       <button class="modal-close-button" type="button" data-modal-close>
         <svg width="11" height="11">
           <use href="./images/sprite.svg#close"></use>
